--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>my-first-pro</title>
 </head>
 <body>
     <h1>Anmaul karim amar name kairm</h1>
     <h2>hassan koi thake bol</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quis qui ab sint quaerat repudiandae ad asperiores, eum provident
-         distinctio, id totam quo odio eaque laboriosam, repellat in beatae nam!</p>
+         distinctio, id totam quo odio eaque laboriosam, repellat in beatae nam!</p><br>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum ad quo, consequatur voluptatum explicabo optio aliquam, odio earum, libero facilis magni.
+             Distinctio iste corporis perspiciatis, voluptates placeat aliquam! Aliquid, quasi?</p>
 </body>
 </html>
